# jwin

./: .gitignore  CMakeLists.txt  README.md  requirements.md
source/: common.h  context.h  error.c  error.h  events.c  events.h  internal.c  internal.h  jwin.h  jwin_vk.h  window.h
source/win32/: common_win32.h  context_win32.c  context_win32.h  vk_win32.c  window_win32.c  window_win32.h
source/xlib/: common_xlib.h  context_xlib.c  context_xlib.h  vk_xlib.c  window_xlib.c  window_xlib.h
test/: base_test.c  multiwin.c  test_common.h  vk_test.c
